@@ -1,6 +1,8 @@
 Changes for the Labyrinth-Plugin-Requests
 =========================================
 
+        - added more tests around deletion.
+
 1.06	2015-03-17
         - extended functional test suite.
         - added requestid to request table.
